# haskell-tic-tac-toe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  haskell-tic-tac-toe.cabal
app/: Board.hs  Cell.hs  Main.hs  Player.hs  Skynet.hs
