cabal-version:      2.4
name:               haskell-tic-tac-toe
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-tic-tac-toe
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-uni-patterns
        -Wunused-packages
        -Wno-name-shadowing
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    other-modules:
        Board
        Cell
        Player
        Skynet
    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        DeriveFunctor
        TupleSections
    build-depends:
          base ^>=4.16.4.0
        , containers >= 0.6.5 && < 0.7
    hs-source-dirs:   app
    default-language: Haskell2010
